KULRICE-4437 - committing first merge of 1.0.3 into 1.1.0 - relevant 1.0.3 revision is 14215