@@ -16,6 +16,9 @@
  */
 package org.kuali.rice.kew.config;
 
+
+import java.io.IOException;
+import java.net.SocketException;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -24,14 +27,17 @@ import java.util.Properties;
 
 import javax.xml.namespace.QName;
 
+import org.apache.commons.httpclient.DefaultHttpMethodRetryHandler;
 import org.apache.commons.httpclient.HostConfiguration;
 import org.apache.commons.httpclient.HttpClient;
+import org.apache.commons.httpclient.HttpMethod;
 import org.apache.commons.httpclient.MultiThreadedHttpConnectionManager;
 import org.apache.commons.httpclient.cookie.CookiePolicy;
 import org.apache.commons.httpclient.params.HttpClientParams;
 import org.apache.commons.httpclient.params.HttpConnectionManagerParams;
 import org.apache.commons.httpclient.params.HttpMethodParams;
 import org.apache.commons.httpclient.params.HttpParams;
+import org.apache.commons.httpclient.util.IdleConnectionTimeoutThread;
 import org.apache.commons.lang.StringUtils;
 import org.kuali.rice.core.config.ConfigContext;
 import org.kuali.rice.core.resourceloader.BaseResourceLoader;
@@ -54,6 +60,7 @@ import org.springframework.remoting.httpinvoker.HttpInvokerProxyFactoryBean;
  * @author Kuali Rice Team (rice.collab@kuali.org)
  */
 public class ThinClientResourceLoader extends BaseResourceLoader {
+		private static final org.apache.log4j.Logger LOG = org.apache.log4j.Logger.getLogger(ThinClientResourceLoader.class);
 
     	private static final String DEFAULT_MAX_CONNECTIONS = "40";
     	private static final String DEFAULT_CONNECTION_TIMEOUT = "60000";
@@ -70,16 +77,27 @@ public class ThinClientResourceLoader extends BaseResourceLoader {
     	public static final String GROUP_ENDPOINT = "group.javaservice.endpoint"; 
     	public static final String SECURE_GROUP_ENDPOINT = "secure.group.javaservice.endpoint"; 
     	
+    	
+    	private static final String IDLE_CONNECTION_THREAD_INTERVAL_PROPERTY = "ksb.thinClient.idleConnectionThreadInterval";
+    	private static final String IDLE_CONNECTION_TIMEOUT_PROPERTY = "ksb.thinClient.idleConnectionTimeout";
+    	private static final String DEFAULT_IDLE_CONNECTION_THREAD_INTERVAL = "7500";
+    	private static final String DEFAULT_IDLE_CONNECTION_TIMEOUT = "5000";
+    	private static final String RETRY_SOCKET_EXCEPTION_PROPERTY = "ksb.thinClient.retrySocketException";
+    	
     	private Map<String, Object> services = Collections.synchronizedMap(new HashMap<String, Object>());
 
+    	private IdleConnectionTimeoutThread ictt;
+    	
 	public ThinClientResourceLoader() {
 		super(new QName(ConfigContext.getCurrentContextConfig().getServiceNamespace(), "ThinClientResourceLoader"));
+		ictt = new IdleConnectionTimeoutThread();
 	}
 
 	@Override
 	public void start() throws Exception {
 		super.start();
 		initializeHttpClientParams();
+		runIdleConnectionTimeout();
 		//springLifecycle.start();
 	}
 
@@ -88,6 +106,9 @@ public class ThinClientResourceLoader extends BaseResourceLoader {
 	@Override
 	public void stop() throws Exception {
 		super.stop();
+		if (ictt != null) {
+		    ictt.shutdown();
+		}
 		//springLifecycle.stop();
 	}
 
@@ -143,11 +164,7 @@ public class ThinClientResourceLoader extends BaseResourceLoader {
 	    proxyFactory.setServiceInterface(serviceInterface);
 	    String secureProp = ConfigContext.getCurrentContextConfig().getProperty(secureEndpointParam);
 	    Boolean secureIt = null;
-	    if (secureProp == null) {
-		secureIt = true;
-	    } else {
-		secureIt = new Boolean(secureProp);
-	    }
+        secureIt = secureProp == null || Boolean.valueOf(secureProp);
 	    KSBHttpInvokerRequestExecutor executor = new KSBHttpInvokerRequestExecutor(getHttpClient());
 	    executor.setSecure(secureIt);
 	    proxyFactory.setHttpInvokerRequestExecutor(executor);
@@ -212,6 +229,51 @@ public class ThinClientResourceLoader extends BaseResourceLoader {
 		params.setParameter(HttpConnectionManagerParams.MAX_HOST_CONNECTIONS, maxHostConnectionsMap);
 		params.setIntParameter(HttpConnectionManagerParams.MAX_TOTAL_CONNECTIONS, new Integer(DEFAULT_MAX_CONNECTIONS));
 		params.setIntParameter(HttpConnectionManagerParams.CONNECTION_TIMEOUT, new Integer(DEFAULT_CONNECTION_TIMEOUT));
+	
+		boolean retrySocketException = new Boolean(ConfigContext.getCurrentContextConfig().getProperty(RETRY_SOCKET_EXCEPTION_PROPERTY));
+		if (retrySocketException) {
+		    LOG.info("Installing custom HTTP retry handler to retry requests in face of SocketExceptions");
+		    params.setParameter(HttpMethodParams.RETRY_HANDLER, new CustomHttpMethodRetryHandler());
+		}
+	}
+	
+		/**
+	 * Idle connection timeout thread added as a part of the fix for ensuring that 
+	 * threads that timed out need to be cleaned or and send back to the pool so that 
+	 * other clients can use it.
+	 *
+	 */
+	private void runIdleConnectionTimeout() {
+	    if (ictt != null) {
+		    String timeoutInterval = ConfigContext.getCurrentContextConfig().getProperty(IDLE_CONNECTION_THREAD_INTERVAL_PROPERTY);
+		    if (StringUtils.isBlank(timeoutInterval)) {
+			timeoutInterval = DEFAULT_IDLE_CONNECTION_THREAD_INTERVAL;
+		    }
+		    String connectionTimeout = ConfigContext.getCurrentContextConfig().getProperty(IDLE_CONNECTION_TIMEOUT_PROPERTY);
+		    if (StringUtils.isBlank(connectionTimeout)) {
+			connectionTimeout = DEFAULT_IDLE_CONNECTION_TIMEOUT;
+		    }
+		    
+		    ictt.addConnectionManager(getHttpClient().getHttpConnectionManager());
+		    ictt.setTimeoutInterval(new Integer(timeoutInterval));
+		    ictt.setConnectionTimeout(new Integer(connectionTimeout));
+		    //start the thread
+		    ictt.start();
+	    }
+	}
+	
+	private static final class CustomHttpMethodRetryHandler extends DefaultHttpMethodRetryHandler {
+
+	    @Override
+	    public boolean retryMethod(HttpMethod method, IOException exception, int executionCount) {
+		boolean shouldRetry = super.retryMethod(method, exception, executionCount);
+		if (!shouldRetry && exception instanceof SocketException) {
+		    LOG.warn("Retrying request because of SocketException!", exception);
+		    shouldRetry = true;
+		}
+		return shouldRetry;
+	    }
+	    
 	}
 
 }
